--- a/src/_templates/bake-book.njk
+++ b/src/_templates/bake-book.njk
@@ -2,9 +2,9 @@
 
 {% set relative_path = "../" %}
 
-{% block page_title %}{{ title }}{% endblock %}
+{% block page_title %}{{ member.name }}{% endblock %}
 
-{% block page_description %}{{ title }} by {{ author }}{% endblock %}
+{% block page_description %}Learn more about {{ member.name }}, a member of Queen.{% endblock %}
 
 {% block content %}
   <article class="container">
