--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,3 +24,17 @@
 h3 {
   font-size: 1.5rem;
 }
+
+// Jumbotron
+.jumbotron {
+  background: url('../img/queen-band-wallpaper-thin.jpg') no-repeat center center;
+  background-size: cover;
+  color: white;
+  text-align: center;
+  padding: 4rem 0;
+  
+  h1.display-4, .lead {
+    font-family: 'Libre Baskerville', serif;
+    color: inherit;
+  }
+}
