--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,24 +1,19 @@
 // Custom variable overrides
 // See node_modules/bootstrap/scss/_variables.scss
+$navbar-background-color: #000; // Black 
+$navbar-link-color: #ffc0cb; // Pink
 
 // $body-bg: black;
 // $body-color: white;
 // $link-hover-color: grey;
 // $font-family-sans-serif: "Helvetica Neue";
 
-/* bootstrap */
+/* Bootstrap */
 // Option A: Include all of Bootstrap
 @import '../../node_modules/bootstrap/scss/bootstrap';
 
-// Option B: Include parts of Bootstrap
-// See https://getbootstrap.com/docs/4.1/getting-started/theming/#importing
-
-// Required
-// @import "../../node_modules/bootstrap/scss/functions";
-// @import "../../node_modules/bootstrap/scss/variables";
-// @import "../../node_modules/bootstrap/scss/mixins";
-
 // Import partials
+
 @import 'nav';
 
 h3 {
