--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,41 +1,34 @@
-// Custom variable overrides
-// See node_modules/bootstrap/scss/_variables.scss
+
 $navbar-background-color: #000; // Black 
 $navbar-link-color: #ffc0cb; // Pink
 
-// $body-bg: black;
-// $body-color: white;
-// $link-hover-color: grey;
-// $font-family-sans-serif: "Helvetica Neue";
-
-/* Bootstrap */
-// Option A: Include all of Bootstrap
 @import '../../node_modules/bootstrap/scss/bootstrap';
-
-// Import partials
-
 @import 'nav';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@700&display=swap');
 
 h3 {
   font-size: 1.5rem;
 }
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap');
 
-.custom-jumbotron {
-  text-align: center;
-  padding-top: 5rem; /* Increase as needed */
-  padding-bottom: 5rem; /* Increase as needed */
-  background-color: #000; /* Black background for better visibility of white text */
-  color: white;
+.custom-jumbotron h1 {
+  font-family: 'Cinzel', serif;
+  color: #ffffff;
+  font-size: 4.5rem;
+  margin-bottom: 1rem;
+  font-weight: 700;
 }
 
-.custom-jumbotron img {
-  margin-bottom: 2rem; /* Space between the image and the headline */
+@import url('https://fonts.googleapis.com/css2?family=Cardo&display=swap');
+
+.custom-jumbotron p.lead {
+  font-family: 'Cardo', serif;
+  color: #ffffff;
+  font-size: 1.25rem;
+  margin-top: 1rem;
+  font-weight: 400;
 }
 
-.custom-jumbotron .lead {
-  margin-top: 2rem; /* Space between headline and lead text */
-}
 
 // Base styles
 body, p {
@@ -47,3 +40,13 @@ h1, h2, h3 {
   font-family: 'Playfair Display', serif; // Headers font
 }
 
+.read-more-btn {
+  background-color: #000; // Black background
+  color: #fff; // White text
+  border: none; // No border
+  
+  &:hover {
+    background-color: #333; // Slightly lighter black on hover for feedback
+    color: #fff; // Text remains white
+  }
+}
