--- a/src/index.njk
+++ b/src/index.njk
@@ -19,7 +19,7 @@
     {% for member in queen_data.members %}
       <div class="col-md-4">
         <img src="img/band/{{ slug }}.jpg" alt="Photo of {{ name }}" class="img-fluid">
-        <h3><a href="members/{{ slug }}.html">{{ member.name }}</a></h3>
+        <h3><a href="members/{{ slug }}.html">{{ name }}</a></h3>
         <p>{{ instrument }}</p>
       </div>
     {% endfor %}
