--- a/src/tour.njk
+++ b/src/tour.njk
@@ -19,10 +19,10 @@
         <tbody>
             {% for tour in tour_dates %}
             <tr>
-                <td>{{ tour.date }}</td>
-                <td>{{ tour.city }}</td>
-                <td>{{ tour.country }}</td>
-                <td>{{ tour.venue }}</td>
+                <td>{{ date }}</td>
+                <td>{{ city }}</td>
+                <td>{{ country }}</td>
+                <td>{{ venue }}</td>
             </tr>
             {% endfor %}
         </tbody>
