--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,3 @@
-// _variables.scss
 $navbar-background-color: #000; // Black
 $navbar-link-color: #ffc0cb; // Pink
 $body-bg: black;
@@ -11,3 +10,6 @@ $font-family-lead: 'Cardo', serif; // Jumbotron subtitle font
 $button-background-color: #000; // Black background for buttons
 $button-text-color: #fff; // White text for buttons
 $button-hover-background-color: #333; // Slightly lighter black on hover for buttons
+
+// Adding new font variables
+$font-family-hero-header: 'Sedan', serif; // Font for hero headers
