--- a/src/_templates/bake-tour.njk
+++ b/src/_templates/bake-tour.njk
@@ -19,10 +19,10 @@
         <tbody>
             {% for date in tour_dates %}
             <tr>
-                <td>{{ date.date }}</td>
-                <td>{{ date.city }}</td>
-                <td>{{ date.country }}</td>
-                <td>{{ date.venue }}</td>
+                <td>{{ date }}</td>
+                <td>{{ city }}</td>
+                <td>{{ country }}</td>
+                <td>{{ venue }}</td>
             </tr>
             {% endfor %}
         </tbody>
