--- a/src/_templates/base.njk
+++ b/src/_templates/base.njk
@@ -2,8 +2,8 @@
 <html lang="en">
   <!-- A Intro to Coding for Journalists class project -->
   <head>
-    <title>{% block page_title %}Default title{% endblock %}</title>
-    <meta name="description" content="{% block page_description %}Default description{% endblock %}">
+    <title>{% block page_title %}QUEEN{% endblock %}</title>
+    <meta name="description" content="{% block page_description %}Welcome to Queen's world{% endblock %}">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
